# file-prep-poc

./: .env.example  Dockerfile  compose.yaml  pyproject.toml
src/: .env.example  __init__.py  celery.py  data_catalogue.py  factories.py  file_handlers.py  main.py  preparer.py  schema.py  settings.py  subscriptions.py  tasks.py
src/scripts/: base.py
src/scripts/horizon/: __init__.py  daily_performance_sales.py
src/scripts/retaillink/: __init__.py  current_store_stock.py  daily_sales.py
src/scripts/waitroseconnect/: __init__.py  daily_line_sales.py
tests/: conftest.py  test_data_catalogue.py  test_factories.py  test_preparer.py
