[tool.poetry]
name = "preparation"
version = "0.1.0"
description = ""
authors = ["Thomas Weatherston <thomas.weatherston@atheon.co.uk>"]
readme = "README.md"

[[tool.poetry.source]]
name = "atheon"
url = "https://atheon.mycloudrepo.io/repositories/atheon-packages"
priority = "supplemental"

[[tool.poetry.source]]
name = "PyPI"
priority = "primary"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
celery = "^5.3.4"
fastapi = {extras = ["all"], version = "^0.103.2"}
pandas = "^2.1.1"
fsspec = "^2023.9.2"
chardet = "^5.2.0"
numpy = "^1.26.1"
python-dotenv = "^1.0.0"
s3fs = "^2023.10.0"
pydantic-settings = "^2.1.0"
faststream = {extras = ["rabbit"], version = "^0.2.14"}
m2m-base-client = { version="^4.4.0", source="atheon" }
pymemcache = "^4.0.0"


[tool.poetry.group.dev.dependencies]
black = "^23.11.0"
pytest = "^7.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
